--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/src/reportWebVitals.js
+/src/setupTests.js
+/src/index.css
+/src/App.css
+/src/logo.svg
