--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0"
+    "@testing-library/react": "^13.3.0",
+    "msw": "^0.42.2"
   },
   "jest": {
     "collectCoverageFrom": [
